--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
  <body>
      <header>
         <div class="container">
-            <div class="logo"><img src="assets/svg/logo.svg" alt="logo" width="50px" height="50px"></div>
+            <div class="logo"><img src="assets/svg/logo.svg" alt="logo" width="50" height="50"></div>
             <div class="nav-list"><nav>
-             <a href="#skills">Skills</a>
+             <a href="#skills" class="change-color">Skills</a>
              <a href="#portfolio">Portfolio</a>
              <a href="#video">Video</a>
              <a href="#price">Price</a>
@@ -35,7 +35,7 @@
              <h1>Alexa Rise</h1>
              <p class="introduction">Save sincere emotions, romantic feelings and happy moments of life together 
                 with professional photographer Alexa Rise</p>
-                <span><button><div class="button-text">Hire me</div></button></span>
+                <span><button><div class="button-text">Hire me</div></button></span></div>
          </section>
 
          <section id="skills" class="skills">
@@ -93,7 +93,7 @@
          <section id="video" class="video">
             <div class="heh2"><h2>Video</h2></div>
         <div class="video-player">
-          
+          <button class="logo-video"><img src="assets/svg/Play_hover.svg" alt="video-player-logo"></button>
             </div>
         </section>
 
