--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset="utf-8">
   <title>portfolio</title>
+  <link rel="shortcut icon" href="assets/svg/favicon.ico" type="image/ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:wght@700&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
